@@ -24,6 +24,7 @@
 * Braintree: Actually account for nil address fields [curiousepic] #3032
 * Credorax: allow sending submerchant ID (h3 parameter) [bpollack] #3040
 * Worldpay: Pass stored credential option fields [curiousepic] #3041
+* Paymentez: Supports phone field, does not send if empty [molbrown] #3043
 
 == Version 1.85.0 (September 28, 2018)
 * Authorize.Net: Support custom delimiter for cim [curiousepic] #3001
